--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
     "xss": "^1.0.8"
   },
   "scripts": {
-    "start": "NODE_ENV=productio build/index.js",
     "dev": "concurrently -n 'server,client' -c 'red,green'  \"nodemon app.js\" \"NODE_ENV=dev PORT=8000 react-scripts start\"",
-    "server": "NODE_ENV=production nodemon app.js",
+    "start": "NODE_ENV=production  react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
